fixed another layout bug

--- a/wiki/page_templates/reference/expand_images.css
+++ b/wiki/page_templates/reference/expand_images.css
@@ -76,7 +76,4 @@
                 height:1em;
                 width:100%;
             }
-            img{
-                display:block;
-            }
         </style>
